dnl Configure script for UCW sock
dnl (c) 1998 Martin Mares <mj@ucw.cz>
AC_INIT(sock.c)

AC_PROG_CC
AC_MSG_CHECKING(whether warnings should be enabled)
if test -n "$GCC" ; then
  AC_MSG_RESULT(yes)
  CFLAGS="$CFLAGS -Wall -W -Wno-parentheses -Wstrict-prototypes -Wno-unused"
else
  AC_MSG_RESULT(no)
fi
AC_PROG_INSTALL
AC_CHECK_LIB(resolv, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, gethostbyname)
AC_TYPE_PID_T
AC_TYPE_SIGNAL
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
